# podwhisperer

./: .gitignore  .mcp.json  3a  CLAUDE.md  LICENSE  README.md  biome.json  common-tags.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  template.yaml  vocabulary-substitutions.example.json
.claude/: settings.local.json
.github/workflows/: README.md  build.yml  ci.yml
cdk/: .gitignore  cdk.json  config.example.ts  package.json
cdk/.claude/: settings.local.json
cdk/lib/: podwhisperer-stack.ts
data-resources/: template.yaml
episode-downloader/: package-lock.json  package.json  template.yaml  tsconfig.json
episode-downloader/statemachine/: transcription-step-function.asl.json
episode-downloader/test-events/: audio-bad-episode.json
notebooks/: episode_download_from_anchor.ipynb  local_server_inference.ipynb  whisper_sagemaker_client.ipynb
sagemaker-resources/: template.yaml
sample-audio/: sample1.m4a  sample2.m4a
transcript-orchestration/: .dockerignore  package-lock.json  package.json  template.yaml  tsconfig.json  vite.config.ts
whisper-image/: Dockerfile  README.md  requirements.txt  template.yaml
whisperx-image/: .coverage  .dockerignore  Dockerfile  Makefile  pyproject.toml
whisperx-image/src/: container_worker.py  job.py  requirements.txt
whisperx-image/src/utils/: __init__.py  audio.py  timing.py
whisperx-image/src/whisperx_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
whisperx-image/tests/: __init__.py  conftest.py  test_audio.py  test_container_worker.py  test_timing.py
(+74 files in other folders)
