[project]
name = "whisperx-worker"
version = "0.1.0"
description = "GPU transcription worker for Podwhisperer"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-timeout>=2.0",
    "freezegun>=1.0",
    "ruff>=0.8",
]
# Lightweight deps for CI testing (no GPU packages)
ci = [
    "boto3>=1.35",
    "psutil>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 10  # Fail tests that take longer than 10 seconds
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["utils", "job", "container_worker"]

[tool.coverage.run]
source = ["src"]
omit = ["src/job.py"]  # Heavy GPU dependencies, tested separately

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
